Bugs fix added some new Features